force-app/main/default/objects/Committee_Member__c/Committee_Member__c.object-meta.xml
<CustomObject>
    <label>Committee Member</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Committee Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>