force-app/main/default/objects/Committee_Member__c/fields/Assignment_Count__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Count__c</fullName>
    <description>Audit trail — how many times this member has been picked</description>
    <inlineHelpText>Audit trail — how many times this member has been picked</inlineHelpText>
    <label>Assignment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>