force-app/main/default/objects/Committee_Member__c/fields/Community_Member_Password__c.field-meta.xml
<CustomField>
    <fullName>Community_Member_Password__c</fullName>
    <formula>Committee_Master__r.Password__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Member Password</label>
    <type>Text</type>
</CustomField>