force-app/main/default/objects/Committee_Member__c/fields/Community_Member_UUID__c.field-meta.xml
<CustomField>
    <fullName>Community_Member_UUID__c</fullName>
    <formula>Committee_Master__r.Firebase_UID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Member UUID</label>
    <type>Text</type>
</CustomField>