force-app/main/default/objects/Committee_Member__c/fields/Is_Committee_Review__c.field-meta.xml
<CustomField>
    <fullName>Is_Committee_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Committee Review</label>
    <type>Checkbox</type>
</CustomField>