force-app/main/default/objects/Committee_Member__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Co-chair</fullName>
            </value>
            <value>
                <fullName>DCM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>