force-app/main/default/objects/Committee_Member__c/fields/Yearly_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Schemes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Schemes</label>
    <referenceTo>Yearly_Schemes__c</referenceTo>
    <relationshipLabel>Committee Members</relationshipLabel>
    <relationshipName>Committee_Members</relationshipName>
    <type>Lookup</type>
</CustomField>