force-app/main/default/objects/Committee_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Committee_Master__c</columns>
    <columns>Yearly_Schemes__c</columns>
    <columns>Email__c</columns>
    <columns>Designation__c</columns>
    <columns>Department__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>